[gd_scene load_steps=4 format=3 uid="uid://bdaiibxdoj2gw"]

[ext_resource type="Script" path="res://Alerts/PredictionAlert/Outcome/Outcome.gd" id="1_55i4g"]
[ext_resource type="FontFile" uid="uid://cvyynw1naq83g" path="res://Fonts/monogram.ttf" id="1_hy533"]

[sub_resource type="LabelSettings" id="LabelSettings_f4128"]
font = ExtResource("1_hy533")
font_size = 32
font_color = Color(0.254902, 0.266667, 0.32549, 1)

[node name="OutcomeItem" type="Node2D"]
script = ExtResource("1_55i4g")
metadata/_edit_horizontal_guides_ = [26.0]
metadata/_edit_vertical_guides_ = [350.0]

[node name="OutcomeTitle" type="Label" parent="."]
offset_right = 196.0
offset_bottom = 26.0
text = "Yes"
label_settings = SubResource("LabelSettings_f4128")
text_overrun_behavior = 3

[node name="OutcomePoints" type="Label" parent="."]
offset_left = 200.0
offset_right = 350.0
offset_bottom = 26.0
text = "0"
label_settings = SubResource("LabelSettings_f4128")
horizontal_alignment = 2

[node name="OutcomeBar" type="ColorRect" parent="."]
offset_top = 31.0
offset_right = 12.0
offset_bottom = 43.0
color = Color(0.921569, 0.34902, 0.588235, 1)
